# libsparsematrix

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile_commands.json  copy_file.csh  make_file.csh
data/: 01.ijv  star.spf
docs/: CMakeLists.txt  doxygen.conf
include/: sparsematrix_git.hpp.in  sparsematrix_main.hpp  sparsematrix_sparsematrix.hpp  sparsematrix_version.hpp
src/: CMakeLists.txt  Makefile  sparse_main.cpp  sparse_main.hpp  sparse_sparsematrix.cpp  sparse_sparsematrix.hpp  sparsematrix_main.cpp  sparsematrix_sparsematrix.cpp  sparsematrix_version.cpp
test/: CMakeLists.txt  a.tri  sparsematrix_git.test.cpp  sparsematrix_main.test.cpp  sparsematrix_sparsematrix.test.cpp  sparsematrix_version.test.cpp
